--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,10 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @region.name %>
-</p>
-
-
-<%= link_to 'Edit', edit_region_path(@region) %> |
-<%= link_to 'Back', regions_path %>
+<p><%= @region.name %></p>
