Front end majore rework

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -18,9 +18,9 @@
   <thead>
     <tr>
       <th>Region</th>
-      <th></th>
-      <th>Name</th>
       <th>Sport</th>
+      <th></th>
+      <th>Full Title</th>
       <th>Date</th>
       <th>Start</th>
       <th>End</th>
@@ -30,12 +30,12 @@
     <% @channel.programs.chronological.by_title.each do |program| %>
       <tr>
         <td><%= program.region.name %></td>
-        <td><%= link_to "<i class=\"icon-google-plus\"></i>".html_safe, "http://www.google.com.au/search?q=" + program.full_title, :target => "_blank" %></td>
-        <td><%= program.full_title %></td>
         <td><%= program.sport.name %></td>
-        <td><%= program.start_date %></td>
-        <td><%= program.start_time %></td>
-        <td><%= program.end_time %></td>  
+        <td><%= link_to "<i class=\"icon-search\"></i>".html_safe, "http://www.google.com.au/search?q=" + program.full_title, :target => "_blank" %></td>
+        <td><%= link_to program.full_title, program %></td>
+        <td><%= program.local_start_date %></td>
+        <td><%= program.local_start_time %></td>
+        <td><%= program.local_end_time %></td>  
       </tr>
     <% end %>
   </tbody>
