--- a/app/views/layouts/_body_left.html.erb
+++ b/app/views/layouts/_body_left.html.erb
@@ -1,4 +1,5 @@
 <%= render "shared/left_menu_logged_in" %>
+<%= render "shared/left_menu_search" %>
 <%= render "shared/left_menu_sport_list" %>
 <%= render "shared/left_menu_advertisment1" %>
 <%= render "shared/left_menu_region_list" %>
