--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <div class="row centre">
-    <h1><%= image_tag("stv-logo.png", :size => "39x39", :alt =>"Sport on TV logo") %> <a href="/">SPORT ON TV</a></h1>
+    <h1><a href="/">SPORT ON TV</a></h1>
     <p>EVERY SPORT. EVERY CHANNEL.</p>
   </div>
 </header>
