--- a/app/views/shared/_left_menu_advertisment2.html.erb
+++ b/app/views/shared/_left_menu_advertisment2.html.erb
@@ -1,4 +1,6 @@
+<% if !logged_in? %>
 <div class="left_advertisment">
   <p class="centre advertisment"><small>Advertisment</small></p>
   <img src="http://placehold.it/200x200" alt="placeholder 200x200">
 </div>
+<% end %>
