--- a/app/views/shared/_left_menu_logged_in.html.erb
+++ b/app/views/shared/_left_menu_logged_in.html.erb
@@ -7,7 +7,11 @@
       <h3>Admin Options</h3>
       <li><%= link_to 'Login', '/Login' %></li>
       <li><%= link_to 'Dashboard', '/Dashboard' %></li>
+      <li><%= link_to 'Regions', regions_path %></li>
+      <li><%= link_to 'Sports', sports_path %></li>
       <li><%= link_to 'Channels', channels_path %></li>
+      <li><%= link_to 'Programs', programs_path %></li>
+      <li><%= link_to 'Sport Keywords', sport_keywords_path %></li>
       
     </ul>
   </div>
