--- a/app/views/sport_keywords/edit.html.erb
+++ b/app/views/sport_keywords/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing sport_keyword</h1>
-
+<h3>Editing Sport Keyword</h3>
 <%= render 'form' %>
-
-<%= link_to 'Show', @sport_keyword %> |
-<%= link_to 'Back', sport_keywords_path %>
