--- a/app/views/sports/edit.html.erb
+++ b/app/views/sports/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing sport</h1>
-
+<h3>Editing Sport</h3>
 <%= render 'form' %>
-
-<%= link_to 'Show', @sport %> |
-<%= link_to 'Back', sports_path %>
