--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,23 +1,23 @@
-<h1>Listing sports</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @sports.each do |sport| %>
-  <tr>
-    <td><%= sport.name %></td>
-    <td><%= link_to 'Show', sport %></td>
-    <td><%= link_to 'Edit', edit_sport_path(sport) %></td>
-    <td><%= link_to 'Destroy', sport, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<h3>Listing Sports</h3>
+<p><%= link_to 'New', new_sport_path, :class => 'btn btn-mini btn-primary' %></p>
+<table class="table table-striped table-condensed admin">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Program Count</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @sports.each do |sport| %>
+      <tr>
+        <td><%= link_to sport.name, sport %></td>
+        <td><%= sport.programs.count %></td>
+        <td>
+          <%= link_to 'Edit', edit_sport_path(sport), :class => 'btn btn-mini' %>
+          <%= link_to 'Destroy', sport, confirm: 'Are you sure?', method: :delete, :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
-
-<br />
-
-<%= link_to 'New Sport', new_sport_path %>
