--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,10 +33,11 @@ body {
   Bootstrap customisations and tweaks
   ------------------------------------------------------------------------*/
 
-.alert{
+.alert, .btn{
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
+    width: auto;
 }
 
 .centre{
@@ -51,8 +52,16 @@ body {
     margin: 10px;
 }
 
+.breadcrumb{
+    margin-right: 20px;
+}
+
 table.admin{
     width: 728px;
+}
+
+#search{
+    width: 120px;
 }
 
 
@@ -61,7 +70,13 @@ table.admin{
   ------------------------------------------------------------------------*/
 header {
     height: 156px;
-    color: #fff;	
+    color: #fff;
+}
+
+header div{
+    background-image: url(/assets/apple-touch-icon-72x72.png);
+    background-repeat: no-repeat;
+    background-position: 8% 50%;
 }
 header h1 {
     line-height: 80px;
@@ -143,7 +158,7 @@ header a:hover{
     border-bottom: none;
 }
 
-.left_content ul, .left_content img{
+.left_content ul, .left_content img, .left_content form{
     margin-left: 10px;
     margin-bottom: 10px;
 }
@@ -156,7 +171,6 @@ header a:hover{
     padding-bottom: 10px;
     padding-right: 5px;
 }
-
 
 /*------------------------------------------------------------------------ 
   The Right
@@ -176,58 +190,31 @@ header a:hover{
 }
 
 /*------------------------------------------------------------------------ 
-  The Table !!Move to a separate CSS later!!
+  The Table
   ------------------------------------------------------------------------*/
 
-table.program{
-	background-color: #fafafa;
+table.programs{
+	width: 728px;
 	border: 1px #000000 solid;
 	border-collapse: collapse;
-	border-spacing: 2px;
-	width: 728px;
-	margin-top: 10px;
-	margin-bottom: 20px;
-	font-size: 11px;
-    }
+}
+
+table.programs th{
+	background-color: #3266e6;
+	color: #fafafa;
+	border-top: 1px #000000 solid;
+	border-bottom: 1px #000000 solid;
+}
+
 col.col_time{
-	width: 7%;
+	width: 6%;
     }
 col.col_title{
-	width: 48%;
+	width: 49%;
     }
 col.col_sport{
 	width: 13%;
     }
 col.col_channel{
 	width: 32%;
-    }
-.program_header{
-	background-color: #3266e6;
-	border-top: 1px #000000 solid;
-	border-bottom: 1px #000000 solid;
-	font-weight: bold;
-        font-size: 11px;
-	color: #fafafa;
-	text-align: left;
-	padding-top: 4px;
-	padding-bottom: 4px;
-	padding-left: 8px;
-	padding-right: 0px;
-    }
-tr.program{
-	background-color: #fafafa;
-    }
-tr.program:hover{
-	background-color: #EEEEEE;
-    }
-td.program{
-	border-bottom: 1px #6699CC dotted;
-	text-align: left;
-	vertical-align: middle;
-	color: #404040;
-	padding-top: 4px;
-	padding-bottom: 4px;
-	padding-left: 8px;
-	padding-right: 8px;
-        font-size: 11px;
     }
