--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Listing channels</h3>
+<h3>Listing Channels</h3>
 <p><%= link_to 'New', new_channel_path, :class => 'btn btn-mini btn-primary' %></p>
 <table class="table table-striped table-condensed admin">
   <thead>
