--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,16 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
       <![endif]-->
       <%= csrf_meta_tags %>
+      
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta name="author" content="<%= @meta_author %>">
+      <meta name="keywords" content="<%= @meta_keywords %>">
+      <meta name="description" content="<%= @meta_description %>">
+      
+      <link rel="apple-touch-icon" href= <%= asset_path "apple-touch-icon-57x57.png" %> >
+      <link rel="apple-touch-icon" sizes="72x72" href= <%= asset_path "apple-touch-icon-72x72.png" %> >
+      <link rel="apple-touch-icon" sizes="114x114" href= <%= asset_path "apple-touch-icon-114x114.png" %> >  
+      
       <%= stylesheet_link_tag "application", :media => "all" %>
       <%= stylesheet_link_tag "custom", :media => "all" %>
       <%= javascript_include_tag "application" %>
