--- a/app/views/programs/edit.html.erb
+++ b/app/views/programs/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing program</h1>
-
+<h3>Editing Program</h3>
 <%= render 'form' %>
-
-<%= link_to 'Show', @program %> |
-<%= link_to 'Back', programs_path %>
