--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,31 +1,35 @@
-<h1>Listing programs</h1>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Subtitle</th>
-    <th>Region</th>
-    <th>Sport</th>
-    <th>Channel</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @programs.each do |program| %>
-  <tr>
-    <td><%= program.title %></td>
-    <td><%= program.subtitle %></td>
-    <td><%= program.region_id %></td>
-    <td><%= program.sport_id %></td>
-    <td><%= program.channel_id %></td>
-    <td><%= link_to 'Show', program %></td>
-    <td><%= link_to 'Edit', edit_program_path(program) %></td>
-    <td><%= link_to 'Destroy', program, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+<h3>Listing Programs</h3>
+<p><%= link_to 'New', new_program_path, :class => 'btn btn-mini btn-primary' %></p>
+<table class="table table-striped table-condensed admin">
+  <thead>
+    <tr>
+      <th>Region</th>
+      <th></th>
+      <th>Full Title</th>
+      <th>Sport</th>
+      <th>Channel</th>
+      <th>Date</th>
+      <th>Start</th>
+      <th>End</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @programs.each do |program| %>
+      <tr>
+        <td><%= program.region.name %></td>
+        <td><%= link_to "<i class=\"icon-search\"></i>".html_safe, "http://www.google.com.au/search?q=" + program.full_title, :target => "_blank" %></td>
+        <td><%= link_to program.full_title, program %></td>
+        <td><%= program.sport.name %></td>
+        <td><%= program.channel.name %></td>
+        <td><%= program.local_start_date %></td>
+        <td><%= program.local_start_time %></td>
+        <td><%= program.local_end_time %></td>  
+        <td>
+          <%= link_to 'Edit', edit_program_path(program), :class => 'btn btn-mini' %>
+          <%= link_to 'Destroy', program, confirm: 'Are you sure?', method: :delete, :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
-
-<br />
-
-<%= link_to 'New Program', new_program_path %>
