--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,6 +1,23 @@
-<p>Sport On Television provides sports guide information for the following regions:</p>
-<ul>
-<% @regions.each do |region| %>
-  <li><%= link_to region.name, "/"+region.name+"/" %></li>
-<% end %>
-</ul>
+<h3>Listing Regions</h3>
+<p><%= link_to 'New', new_region_path, :class => 'btn btn-mini btn-primary' %></p>
+<table class="table table-striped table-condensed admin">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Program Count</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @regions.each do |region| %>
+      <tr>
+        <td><%= link_to region.name, region %></td>
+        <td><%= region.programs.count %></td>
+        <td>
+          <%= link_to 'Edit', edit_region_path(region), :class => 'btn btn-mini' %>
+          <%= link_to 'Destroy', region, confirm: 'Are you sure?', method: :delete, :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
