--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,10 +1,36 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @sport.name %>
-</p>
-
-
-<%= link_to 'Edit', edit_sport_path(@sport) %> |
-<%= link_to 'Back', sports_path %>
+<h3>Show Sport</h3>
+<dl class="dl-horizontal">
+  <dt>Name</dt>
+  <dd class="stv-form"><%= @sport.name %>&nbsp;</dd>
+</dl>
+<div class="form-horizontal form-actions stv-form-buttons">
+  <%= link_to 'Edit', edit_sport_path(@sport), :class => 'btn btn-mini' %>
+  <%= link_to 'Back', sports_path , :class => 'btn btn-mini'%>
+</div>
+<h3>Programs</h3>
+<table class="table table-striped table-condensed admin">
+  <thead>
+    <tr>
+      <th>Region</th>
+      <th>Channel</th>
+      <th></th>
+      <th>Full Title</th>
+      <th>Date</th>
+      <th>Start</th>
+      <th>End</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @sport.programs.chronological.by_title.each do |program| %>
+      <tr>
+        <td><%= program.region.name %></td>
+        <td><%= program.channel.name %></td>
+        <td><%= link_to "<i class=\"icon-search\"></i>".html_safe, "http://www.google.com.au/search?q=" + program.full_title, :target => "_blank" %></td>
+        <td><%= link_to program.full_title, program %></td>
+        <td><%= program.local_start_date %></td>
+        <td><%= program.local_start_time %></td>
+        <td><%= program.local_end_time %></td>  
+      </tr>
+    <% end %>
+  </tbody>
+</table>
