upgraded rails and some gems, disabled ads

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,10 @@ body {
   Bootstrap customisations and tweaks
   ------------------------------------------------------------------------*/
 
+[class^="icon-"] {
+  background-image:none;
+}
+
 .alert, .btn{
     margin-left: 10px;
     margin-right: 10px;
