--- a/app/views/shared/_left_menu_advertisment1.html.erb
+++ b/app/views/shared/_left_menu_advertisment1.html.erb
@@ -1,4 +1,4 @@
-<% if !logged_in? %>
+<% if !logged_in? && false %>
   <div class="left_advertisment">
   <div class="advertisment_content">
     <script type="text/javascript"><!--
