--- a/app/views/guide/show.html.erb
+++ b/app/views/guide/show.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 <% if last_program.nil? || program.local_start_date != last_program.local_start_date %>
   <% if (program_count > 20 && day_count == 0) || day_count == 1 || (day_count == 2 && program_count <= 20)%>
-  <% if !logged_in? %>
+  <% if !logged_in? && false %>
   <div class="advertisment_content">
     <script type="text/javascript"><!--
       google_ad_client = "ca-pub-4406472656891849";
