--- a/app/views/shared/_left_menu_advertisment1.html.erb
+++ b/app/views/shared/_left_menu_advertisment1.html.erb
@@ -1,6 +1,6 @@
-<% if !logged_in? %>
-  <div class="left_advertisment">
+<div class="left_advertisment">
   <div class="advertisment_content">
+    <% if !logged_in? && Rails.env.production? %>
     <script type="text/javascript"><!--
       google_ad_client = "ca-pub-4406472656891849";
       /* STV Block */
@@ -12,6 +12,8 @@
     <script type="text/javascript"
       src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     </script>
+    <% else %>
+    <img src="http://placehold.it/200x200" alt="placeholder 200x200">
+    <% end %>
   </div>
 </div>
-<% end %>
