--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= @title %></title>
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
@@ -19,28 +18,59 @@
       
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= stylesheet_link_tag "custom", :media => "all" %>
-    
   </head>
   <body>
-    <div class="container header">
-      <%= render "layouts/header" %>  
-    </div>
     <div class="container">
-      <div class="row main">
-        <div class="span2 left_content">
-          <%= render "layouts/body_left" %>  
+      <header class="row centre">
+        <div class="span12">  
+          <%= render "layouts/header" %>
         </div>
-        <div class="span10 right_content">
-          <%= render "layouts/body_right" %> 
+      </header>
+      <div class="row main">
+        <div class="span3 left_content">
+          <%= render "layouts/left_menu_logged_in" %>
+          <%= render "layouts/left_menu_search" %>
+          <%= render "layouts/left_menu_sport_list" %>
+          <%= render "layouts/left_menu_advertisment1" %>
+          <%= render "layouts/left_menu_region_list" %>
+          <%= render "layouts/left_menu_page_list" %>
+          <%= render "layouts/left_menu_news_feed" %>
+        </div>
+        <div class="span9 right_content">
+          <%= render "layouts/main_breadcrumbs" %>
+          <%= render "layouts/main_notice" %>
+          <%= yield %>
         </div>
       </div>
-    </div>
-    <div class="container footer">
-      <%= render "layouts/footer" %>  
+      <footer class = "upper_footer row">
+        <div class="span12">
+          <%= render "layouts/footer" %>
+        </div>
+      </footer>
+      <footer class="lower_footer row">
+        <div class="span12">
+          <% if logged_in? %>
+          <%= debug params %>
+          <% end %>
+        </div>
+      </div>
     </div>
     <!-- Javascripts
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
+    <% if !logged_in? && Rails.env.production? %>
+    <!-- Google Analytics -->
+    <script>
+      var _gaq=[['_setAccount','UA-8415542-1'],['_trackPageview']];
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+      s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script> 
+    <% end %>
   </body>
 </html>
+    
+    
+    
+    
