--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title><%= @title %></title>
+    <title><%= title %></title>
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
     <%= csrf_meta_tags %>
-
-    <meta name="author" content="<%= @meta_author %>">
-    <meta name="keywords" content="<%= @meta_keywords %>">
-    <meta name="description" content="<%= @meta_description %>"> 
-    <%= render "layouts/header_apple_touch_icon" %>  
-      
+    <%= render "layouts/header_meta_tags" %>
+    <%= render "layouts/header_apple_touch_icon" %>    
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= stylesheet_link_tag "custom", :media => "all" %>
   </head>
