--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-      <title><%= @title %></title>
-      <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-      <![endif]-->
-      <%= csrf_meta_tags %>
-      
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      
-      <meta name="author" content="<%= @meta_author %>">
-      <meta name="keywords" content="<%= @meta_keywords %>">
-      <meta name="description" content="<%= @meta_description %>">
-      
-      <link rel="apple-touch-icon" href= <%= asset_path "apple-touch-icon-57x57.png" %> >
-      <link rel="apple-touch-icon" sizes="72x72" href= <%= asset_path "apple-touch-icon-72x72.png" %> >
-      <link rel="apple-touch-icon" sizes="114x114" href= <%= asset_path "apple-touch-icon-114x114.png" %> >  
-      
-      <%= stylesheet_link_tag "application", :media => "all" %>
-      <%= stylesheet_link_tag "custom", :media => "all" %>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title><%= title %></title>
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
+    <%= csrf_meta_tags %>
+    <%= render "layouts/header_meta_tags" %>
+    <%= render "layouts/header_apple_touch_icon" %>  
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= stylesheet_link_tag "custom", :media => "all" %>
   </head>
   <body>
     <%= yield %>
