updated feature tests

--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
     <% @channels.each do |channel| %>
-      <tr>
+      <tr id="channel_<%= channel.id %>">
         <td>
         <% if channel.black_flag %>
           <%= link_to "<i class=\"icon-minus-sign\"></i>".html_safe, toggle_black_flag_channel_path(channel), :method => :put %>
