--- a/app/views/layouts/_left_menu_sport_list.html.erb
+++ b/app/views/layouts/_left_menu_sport_list.html.erb
@@ -1,4 +1,4 @@
-<% if !@sports.nil? && !@region.nil? %>
+<% if !@sports.nil? && !@region.nil? && !@region.new_record? %>
   <div class="left_sport_list">
     <ul>
       <li><h3>Select Sport</h3></li>
